Player stat totals on game show view

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -50,6 +50,10 @@ body.box-score.games {
   tr.totals {
     border-top: 1px solid #ccc;
 
+    th, td {
+      font-weight: 700;
+    }
+
     th {
       text-transform: uppercase;
     }
