--- a/app/views/game_mailer/new_stats.text.haml
+++ b/app/views/game_mailer/new_stats.text.haml
@@ -1,3 +1,3 @@
-New Box Scores have been posted for the game between #{@game.team.school.name} and #{@game.opponent.display_name}.
+A final box score has been posted for the game between #{@game.team.school.name} and #{@game.opponent.display_name}.
 
 #{link_to 'Catch up on the scores!', game_url(@game)}
