whitespace separating home/away radio buttons

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -84,6 +84,9 @@ body.box-score.games.edit {
 
   .inline-radio {
     margin: 20px 0 10px;
+    span {
+      margin-right: 10px;
+    }
   }
 
   .input.boolean {
