--- a/app/views/games/form/_game_stats.html.haml
+++ b/app/views/games/form/_game_stats.html.haml
@@ -15,7 +15,7 @@
           team_stats.points(ot_period),
           maxlength: 3
 
-  %td &nbsp;
+  %td.add-period &nbsp;
   %td.final-points
     = game.stats.team_stats(team.id).final
 
