--- a/app/views/games/form/_player_stat_group.html.haml
+++ b/app/views/games/form/_player_stat_group.html.haml
@@ -10,7 +10,7 @@
 
   %tbody
     = simple_fields_for game do |game_fields|
-      - (team.player_game_stats(game) + [PlayerGameStat.new]).each do |player_game_stat|
+      - (team.player_game_stats(game, player_stat_group) + [PlayerGameStat.new]).each do |player_game_stat|
         = game_fields.fields_for :player_game_stats, player_game_stat, child_index: child_index(player_game_stat) do |player_game_stat_fields|
           = player_game_stat_fields.fields_for :stats, player_game_stat do |stats|
             = render 'games/form/player_game_stat_fields',
