--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -28,7 +28,7 @@
         = f.input :coach_email, label: 'Email address'
         = f.input :coach_phone, label: 'Phone number'
 
-      = f.button :submit, disable_with: 'Updating..', id: 'update-team'
+      = f.button :submit, disable_with: 'Updating...', id: 'update-team'
       - unless @team.new_record?
         = link_to 'Delete Team', @team, method: :delete, class: 'tiny alert button delete-team',
           confirm: 'Permanently delete this team?'
