--- a/app/views/shared/_recent_scores.html.haml
+++ b/app/views/shared/_recent_scores.html.haml
@@ -4,7 +4,7 @@
   .row
     - games.each do |game|
       .four.columns
-        %table.game-stats
+        %table.game-stats{ class: game.sport_type }
           %thead
             %tr
               %th.team
