Added legally required content to spam emails

--- a/app/views/game_mailer/new_stats.text.haml
+++ b/app/views/game_mailer/new_stats.text.haml
@@ -1,3 +1,10 @@
 A final box score has been posted for the game between #{@game.team.school.name} and #{@game.opponent.display_name}.
 
 #{link_to 'Catch up on the scores!', game_url(@game)}
+
+
+ADVERTISEMENT
+
+HS Box Scores NYC, LLC * 1133 Broadway * Suite 708 * New York, NY * 10010
+
+If you no longer wish to receive emails from HS Box Scores NYC you may unsubscribe by replying to this message and either (a) typing "Unsubscribe" in the subject line or (b) otherwise communicating your election to unsubscribe in the reply message.
