--- a/app/views/game_mailer/new_stats.html.haml
+++ b/app/views/game_mailer/new_stats.html.haml
@@ -1,3 +1,10 @@
 %p A final box score has been posted for the game between #{@game.team.school.name} and #{@game.opponent.display_name}.
 
 %p #{link_to 'Catch up on the scores!', game_url(@game)}
+
+%br
+%br
+%small ADVERTISEMENT
+%small
+  %strong HS Box Scores NYC, LLC * 1133 Broadway * Suite 708 * New York, NY * 10010
+%small If you no longer wish to receive emails from HS Box Scores NYC you may unsubscribe by replying to this message and either (a) typing "Unsubscribe" in the subject line or (b) otherwise communicating your election to unsubscribe in the reply message.
