--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,6 +1,6 @@
 .row
   .six.columns.centered.user-form
-    %h2 Forgot your password?
+    %h2 Reset your password
     = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
       = f.error_notification
       .form-inputs
