--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -4,6 +4,7 @@
 
 #main.twelve.columns
   - if can?(:manage, @school)
+    = link_to 'Reset Password', new_admin_password_path, class: 'reset-password'
     = link_to 'Edit Profile', edit_school_path(@school), class: 'small button edit-profile'
 
   .info.twelve.columns
