Added ability for Admin to edit profile info
via Account resource

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require filters
  *= require pages
  *= require users
+ *= require accounts
  *= require flashes
  *= require modals
  *= require ie7
