--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -149,7 +149,7 @@ nav.global {
     color: $body-text-color;
   }
 
-  a {
+  a.pill {
     display: inline-block;
     margin-left: 10px;
     padding: 8px 25px;
@@ -174,6 +174,11 @@ nav.global {
       text-decoration: none;
       background-color: rgba(0, 0, 0, 0.2);
     }
+  }
+
+  a.edit-account {
+    display: inline-block;
+    padding-left: 10px;
   }
 }
 
