--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,16 +41,18 @@
           %nav.global
             %p
               %span#registration-links
-              = link_to 'Home', root_path, class: 'home'
+              = link_to 'Home', root_path, class: 'pill home'
               - if admin_signed_in?
-                = link_to 'Sign out', destroy_admin_session_path, method: :delete, id: 'logout'
+                = link_to 'Sign out', destroy_admin_session_path, method: :delete, id: 'logout', class: 'pill'
               - else
-                = link_to 'Admin sign in', new_admin_session_path, id: 'login'
-              = link_to 'About us', '/about-us'
-              = link_to 'Add your school', '#', class: 'account-request'
+                = link_to 'Admin sign in', new_admin_session_path, id: 'login', class: 'pill'
+              = link_to 'About us', '/about-us', class: 'pill'
+              = link_to 'Add your school', '#', class: 'pill account-request'
 
             - if admin_signed_in?
-              %p Welcome, #{current_admin.name}
+              %p
+                Welcome, #{current_admin.name}
+                = link_to 'Edit Account', edit_account_path, class: 'edit-account'
 
     .row
       #content.twelve.columns
