--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,17 +42,15 @@
             %p
               %span#registration-links
               = link_to 'Home', root_path, class: 'pill home'
-              - if admin_signed_in?
-                = link_to 'Sign out', destroy_admin_session_path, method: :delete, id: 'logout', class: 'pill'
-              - else
-                = link_to 'Admin sign in', new_admin_session_path, id: 'login', class: 'pill'
-              = link_to 'About us', '/about-us', class: 'pill'
-              = link_to 'Add your school', '#', class: 'pill account-request'
+              = link_to 'Sign In', new_admin_session_path, id: 'login', class: 'pill' unless admin_signed_in?
+              = link_to 'About Us', '/about-us', class: 'pill'
+              = link_to 'Add Your School', '#', class: 'pill account-request' unless admin_signed_in?
 
             - if admin_signed_in?
               %p
                 Welcome, #{current_admin.name}
-                = link_to 'Edit Account', edit_account_path, class: 'edit-account'
+                = link_to 'Account', edit_account_path, class: 'edit-account'
+                = link_to 'Sign out', destroy_admin_session_path, method: :delete, id: 'logout'
 
     .row
       #content.twelve.columns
