Content and minor styling updates

--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -5,7 +5,7 @@
   %h1.welcome
     Welcome to
     %strong HS Box Scores NYC,
-    your source for varsity
+    dedicated to the display of
     %strong high school basketball, baseball, and softball scores
     in New York City.
 
