--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,8 @@
               = link_to 'Home', root_path, class: 'pill home'
               = link_to 'Sign In', new_admin_session_path, id: 'login', class: 'pill' unless admin_signed_in?
               = link_to 'About Us', '/about-us', class: 'pill'
-              = link_to 'Add Your School', '#', class: 'pill account-request' unless admin_signed_in?
+              = link_to 'Add Your Team', '#', class: 'pill account-request' unless admin_signed_in?
+              = link_to 'FAQ', '/faq', class: 'pill'
 
             - if admin_signed_in?
               %p
