--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -4,4 +4,5 @@ $alert-color: #9b2638;
 $body-background-color: #002e40;
 $black: #151515;
 $body-text-color: #5a5a5a;
+$brand-blue: #142E42;
 $eggshell: #efefef;
