--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,16 +38,20 @@
             %p
               %span#registration-links
               = link_to 'Home', root_path, class: 'pill home'
-              = link_to 'Sign In', new_admin_session_path, id: 'login', class: 'pill' unless admin_signed_in?
               = link_to 'About Us', '/about-us', class: 'pill'
+              = link_to '/faq', class: 'pill' do
+                FAQ
+                %small s
               = link_to 'Add Your Team', '#', class: 'pill account-request' unless admin_signed_in?
-              = link_to 'FAQ', '/faq', class: 'pill'
+              = link_to 'Sign In', new_admin_session_path, id: 'login', class: 'pill' unless admin_signed_in?
 
             - if admin_signed_in?
               %p
                 Welcome, #{current_admin.name}
                 = link_to 'Account', edit_account_path, class: 'edit-account'
                 = link_to 'Sign out', destroy_admin_session_path, method: :delete, id: 'logout'
+
+          = link_to 'HSBoxScores Blog', '#', class: 'blog'
 
           %a.twitter-timeline{"data-widget-id" => "386209842722914304",
             href: "https://twitter.com/hsboxscoresnyc",
