superadmin can change their current school context

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -249,6 +249,15 @@ nav.admin-menu {
   border-top: none;
   background: #F1F1F1;
 
+  .current-school {
+    float: right;
+    line-height: 36px;
+    font-weight: bold;
+    a {
+      font-weight: normal;
+    }
+  }
+
   ul {
     @include horizontal-list-container;
   }
