--- a/app/views/teams/new.html.haml
+++ b/app/views/teams/new.html.haml
@@ -1,4 +1,4 @@
-%h1 #{current_admin.school.name}: Create a New Team
+%h1 #{current_school.name}: Create a New Team
 
 #main
   = render partial: 'form'
