--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -15,9 +15,13 @@
             %span.at at
             %span.team= @game.home_team.school_name
 
-          .date
-            = f.input :date, as: :string, required: false
-            = f.input :neutral_site, as: :boolean
+          .row
+            .twelve.columns
+              = f.input :date, as: :string, required: false
+
+              = f.collection_radio_buttons :home_away, [['home', 'Home'], ['away', 'Away']], :first, :last,
+              required: false, label: false
+              = f.input :neutral_site, as: :boolean
 
 
         #sport_fields
