--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,9 +1,9 @@
 - content_for :title, @game.title
 
 %h1
-  %strong #{@game.away_team.school_name}
-  at
-  %strong #{@game.home_team.school_name}
+  %strong= @game.away_team.school_name
+  = @game.preposition
+  %strong= @game.home_team.school_name
   = @game.sport.name
 
 %h2= @game.date.stamp('March 1, 1999')
