Add Google+ plus one button

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -107,6 +107,7 @@ header.global {
   margin-top: 20px;
 
   .social{
+    color: #cfcfcf;
     position: static;
     float: right;
     background: #333333;
