--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,6 +54,9 @@
             -if facebook_page_url.present?
               = link_to image_tag("social-facebook.png"), facebook_page_url, target: '_blank'
             -if google_page_url.present?
+              .g-plusone{ data: {href: google_page_url} }
+              %span.text
+                Check us out on
               = link_to image_tag("social-google-plus.png"), google_page_url, target: '_blank'
 
           %a.twitter-timeline{"data-widget-id" => "386209842722914304",
@@ -95,4 +98,5 @@
   = render 'shared/request_form'
   = render 'shared/coming_soon_message'
 
+  %script{ src: "https://apis.google.com/js/platform.js", async: true, defer: true }
   = render 'shared/google_analytics'
