--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -53,12 +53,12 @@
 
           .social
             -if facebook_page_url.present?
-              = link_to image_tag("social-facebook.png"), facebook_page_url, target: '_blank'
+              = link_to image_tag("social-facebook.png"), facebook_page_url, target: '_blank', class: 'facebook-js'
             -if google_page_url.present?
               .g-plusone{ data: {href: google_page_url} }
               %span.text
                 Check us out on
-              = link_to image_tag("social-google-plus.png"), google_page_url, target: '_blank'
+              = link_to image_tag("social-google-plus.png"), google_page_url, target: '_blank', class: 'google-plus-js'
 
           %a.twitter-timeline{"data-widget-id" => "386209842722914304",
             href: "https://twitter.com/hsboxscoresnyc",
@@ -74,11 +74,9 @@
             %dl.six.columns
               %dt Boys:
               %dd.boys-basketball= link_to 'Basketball', boys_basketball_path, class: 'first'
-              %dd.boys-baseball= link_to 'Baseball', boys_baseball_path, class: 'disabled'
             %dl.six.columns
               %dt Girls:
               %dd.girls-basketball= link_to 'Basketball', girls_basketball_path, class: 'first'
-              %dd.girls-softball= link_to 'Softball', girls_softball_path, class: 'disabled'
 
         -if admin_signed_in?
           = render 'shared/admin_menu'
