--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -1,4 +1,4 @@
-$action-color: #FF9600;
+$action-color: #FF6C00;
 $alternate-link-color: #84D1DA;
 $alert-color: #9b2638;
 $body-background-color: #002e40;
