--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div id="main" class="columns">
   <div class="post-container">
     <h1 class="post-title"><%= @post.title %></h1>
-
+    <div class="post-excerpt"><%= @post.excerpt %></div>
     <div class="post-body"><%= @post.body %></div>
   </div>
 </div>
