--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -102,49 +102,7 @@ a#branding {
   text-indent: -999em;
 }
 
-header.global {
-  position: relative;
-  margin-top: 20px;
-
-  .social{
-    color: #cfcfcf;
-    position: static;
-    float: right;
-    background: #333333;
-    padding: 5px;
-    border-radius: 5px;
-    margin-bottom: 2px;
-
-    a {
-      padding-top: 2px;
-      width: 35px;
-      display: -webkit-inline-box;
-    }
-  }
-}
-
-a.superadmin-dashboard {
-  z-index: 4;
-  position: absolute;
-  top: 84px;
-  right: 400px;
-}
-
-iframe#twitter-widget-0 {
-  position: relative;
-  left: 34px;
-}
-
-nav.global {
-  text-align: right;
-  white-space: nowrap;
-
-  p {
-    font-size: 11px;
-    font-weight: 700;
-    color: $body-text-color;
-  }
-
+nav {
   a.pill {
     display: inline-block;
     margin-left: 10px;
@@ -181,13 +139,103 @@ nav.global {
       background-color: rgba(0, 0, 0, 0.2);
     }
   }
+}
+
+header.global {
+  position: relative;
+  margin-top: 20px;
+  padding: 0;
+
+  .social{
+    color: #cfcfcf;
+    position: static;
+    float: right;
+    background: #333333;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 2px;
+
+    a {
+      padding-top: 2px;
+      width: 35px;
+      display: -webkit-inline-box;
+    }
+  }
+}
+
+a.superadmin-dashboard {
+  z-index: 4;
+}
+
+.right {
+  text-align: right;
+  display: inline-block;
+}
+
+iframe#twitter-widget-0 {
+  position: relative;
+  left: 34px;
+}
+
+nav.global {
+  text-align: center;
+  padding: 0;
+
+  h1.welcome {
+    text-align: center;
+    width: 100%;
+    padding: 1em 0 1em 0;
+    font-size: 25px;
+    font-family: $body-font;
+  }
+
+  p {
+    font-size: 11px;
+    font-weight: 700;
+    color: $body-text-color;
+  }
+
+  a.nav-item {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    background: #72B5D8;
+    background: rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    overflow: hidden;
+    @include single-box-shadow(transparentize(#333, 0.5), 0, 1px, 1px, 0px, true);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    small {
+      font-size: 8px;
+      position: relative;
+      left: -3px;
+    }
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+      text-decoration: none;
+    }
+
+    &.home {
+      width: 16px;
+      text-indent: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      background-image: image_url('icon-home.png');
+      background-position: center center;
+      background-repeat: no-repeat;
+    }
+
+  }
 
   a {
     display: inline-block;
-    margin-left: 10px;
     color: white;
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 34;
   }
 }
 
@@ -259,7 +307,6 @@ nav.global {
 
 nav.admin-menu {
   position: relative;
-  top: -50px;
   padding: 8px;
   border: 1px solid #666;
   border-top: none;
@@ -325,6 +372,7 @@ footer.global {
   color: #5099c3;
   font-weight: 700;
   text-transform: uppercase;
+  padding-bottom: 2em;
 
   p {
     font-size: 11px;
