--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,5 @@
+@import "base/colors";
+
 .post-body {
   font-size: 18px;
   line-height: 24px;
@@ -12,6 +14,15 @@
   width: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.post-excerpt {
+  padding-top: 1em;
+  padding-bottom: 2em;
+  font-size: 18px;
+  line-height: 24px;
+  color: $grey;
+  width: 80%;
 }
 
 .post-title {
