--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,8 +1,9 @@
 @import 'compass/css3/box-shadow';
 
 .user-form {
+  margin: 3em auto !important;
   background: #fff;
-  padding: 20px;
+  padding: 3em;
   border: 1px solid #666;
   @include single-box-shadow(rgba(#333, 0.3), 3px, 3px, 3px);
 }
