--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,15 +1,18 @@
 - if @filter.sport.present?
   - content_for :title, @filter.sport.name
 
-- unless admin_signed_in?
-  %h1.welcome
-    Welcome to
-    %strong HS Box Scores NYC,
-    dedicated to the display of
-    %strong high school basketball, baseball, and softball scores
-    in New York City.
-
 #main.twelve.columns
+  .row
+    .twelve.columns
+      .row
+        %nav#scores-nav.twelve.columns{ class: params[:sport_id] }
+          %dl.six.columns
+            %dt Boys:
+            %dd.boys-basketball= link_to 'Basketball', boys_basketball_path, class: 'first'
+          %dl.six.columns
+            %dt Girls:
+            %dd.girls-basketball= link_to 'Basketball', girls_basketball_path, class: 'first'
+
   = render 'shared/filter_form'
 
   %section#recent-scores
