--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,8 +1,11 @@
 @import "base/colors";
 
 .post-body {
-  font-size: 18px;
-  line-height: 24px;
+  p {
+    font-size: 18px;
+    line-height: 24px;
+    width: 100%;
+  }
 }
 
 .post-container {
@@ -27,4 +30,8 @@
 
 .post-title {
   font-size: 34px;
+}
+
+.post-form-excerpt {
+  height: 8em;
 }
