--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,2 @@
 <h1 class="post-title"><%= link_to post.title, post %></h1>
-<div class="post-body"><%= post.excerpt %></div>
+<div class="post-body"><p><%= post.excerpt %><p></div>
