--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,5 +3,6 @@
     <h1 class="post-title"><%= @post.title %></h1>
     <div class="post-excerpt"><%= @post.excerpt %></div>
     <div class="post-body"><%= @post.body.html_safe %></div>
+    <%= render 'admin_actions', post: @post %>
   </div>
 </div>
