--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,10 @@
 <div id="main" class="columns">
   <div class="post-container">
     <h1 class="post-title"><%= @post.title %></h1>
-    <div class="post-excerpt"><%= @post.excerpt %></div>
+    <% if @post.game.present? %>
+      <%= render 'games/game_summary', game: @post.game %>
+      <%= link_to 'Box Score', game_path(@post.game), class: 'box-score' %>
+    <% end %>
     <div class="post-body"><%= @post.body.html_safe %></div>
     <%= render 'admin_actions', post: @post %>
   </div>
