--- a/app/views/posts/_admin_actions.html.erb
+++ b/app/views/posts/_admin_actions.html.erb
@@ -1,6 +1,6 @@
 <% if superadmin_signed_in? %>
   <div class="post-actions">
     <%= link_to 'Edit Post', edit_post_path(post) %>
-    <%= link_to 'Delete Post', post_path(post), method: :delete %>
+    <%= link_to 'Delete Post', post_path(post), method: :delete, confirm: "Are you sure?" %>
   </div>
 <% end %>
