Allow user to upload a header image
- Header images styled in index and show
- Use Paperclip and AWS S3
- Bonus! Seeds include admin

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
 
     %header.global.twelve.columns
       .row
-        %nav.large-eight.small-12.columns.top-nav
+        %nav.twelve.columns.top-nav
           = link_to 'Posts', posts_path, class: 'pill'
           = link_to 'Games', games_path, class: 'pill'
           = link_to 'About Us', '/about-us', class: 'pill'
