--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.post-container {
+.posts-container {
   @media (max-width: 40em) {
     width: 100%
   }
@@ -17,6 +17,34 @@
   width: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.post-container {
+  margin: 1em 2em 1em 2em;
+  padding: 1.5em 0 1.5em 0;
+}
+
+.post-image-show {
+  padding: 1em 0 1em 0 !important;
+}
+
+.post-form-image {
+  padding: 0 0 2em 0;
+  font-size: 14px;
+}
+
+.post-image {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 0 1em 0;
+
+  img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+  }
 }
 
 .post-excerpt {
@@ -29,6 +57,7 @@
 }
 
 .post-title {
+  margin: 0 !important;
   font-size: 34px;
 }
 
