--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,9 @@
       <%= f.label :title %>
       <%= f.text_field :title %>
 
+      <%= f.label :header_image %>
+      <%= f.file_field :header_image, class: 'post-form-image' %>
+
       <%= f.label :excerpt %>
       <%= f.text_area :excerpt, class: 'post-form-excerpt' %>
 
