--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
-<div id="main" class="columns">
-  <div class="post-container">
+<div id="main" class="twelve columns">
+  <div class="posts-container">
     <%= render @posts %>
   </div>
 </div>
