--- a/app/assets/stylesheets/base/_fonts.css.scss
+++ b/app/assets/stylesheets/base/_fonts.css.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600,700);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=Signika+Negative:300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 $headline-font: 'Signika Negative', sans-serif;
 $body-font: 'Open Sans', sans-serif;
