--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,9 @@
       <%= f.label :title %>
       <%= f.text_field :title %>
 
+      <%= f.label :game %>
+      <%= f.collection_select :game_id, Game.all, :id, :title, { include_blank: true } %>
+
       <%= f.label :header_image %>
       <%= f.file_field :header_image, class: 'post-form-image' %>
 
@@ -20,10 +23,6 @@
 
       <%= f.label :body %>
       <%= f.cktext_area :body %>
-
-      <% if params[:game_id].present? %>
-        <%= f.hidden_field :game_id, value: params[:game_id] %>
-      <% end %>
 
       <%= f.submit class: 'medium button' %>
     <% end %>
